syntax = "proto3";
package ie.gmit.ds;

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PasswordService {
		rpc hash (HashRequest) returns (HashResponse) {}
		rpc validate (ValidationRequest) returns (ValidationResponse) {}
	}

message HashRequest {
	int32 userId = 1;
	string password = 2;
}
	
message ValidationRequest {
	string password = 1;
	string hashedPassword = 2;
	string salt = 3;
}

message HashResponse {
	int32 userId = 1;
	string hashedPassword = 2;
	string salt = 3;
}

message ValidationResponse {
	bool passwordValid = 1;
}